--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,12 +12,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
   <!-- Styles -->
+  <link rel="stylesheet" href="css/design-tokens.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
   <meta name="description"
     content="نظام حارس السمعة - عزز أعمالك باستخدام الذكاء الاصطناعي لإدارة تقييمات العملاء وتحسين السمعة الرقمية.">
-  <meta name="theme-color" content="#2563eb">
+  <meta name="theme-color" content="#4F46E5">
 </head>
 
 <body>
