Update dashboard for frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
       <!-- User Info (Hidden by default, shown when logged in) -->
       <div class="user-info" id="userInfo" style="display:none; align-items: center; gap: 1rem;">
         <span id="userName" style="font-weight: 600; color: var(--primary);"></span>
-        <button class="btn btn-primary btn-sm" onclick="window.location.href='dashboard.html'">لوحة التحكم</button>
+        <button class="btn btn-primary btn-sm" onclick="window.location.href='dashboard-v2.html'">لوحة التحكم</button>
         <button class="btn btn-outline btn-sm" onclick="AuthManager.logout()">خروج</button>
       </div>
 
