--- a/frontend/dashboard-v2.html
+++ b/frontend/dashboard-v2.html
@@ -397,6 +397,7 @@
     </div>
 
     <!-- Core Scripts -->
+    <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/ui.js"></script>
