--- a/frontend/dashboard-v2.html
+++ b/frontend/dashboard-v2.html
@@ -402,6 +402,10 @@
     <script src="js/auth.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/dashboard-v2.js"></script>
+    <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
 </body>
 
 </html>
