--- a/frontend/dashboard-v2.html
+++ b/frontend/dashboard-v2.html
@@ -162,8 +162,8 @@
                         </div>
                     </div>
 
-                    <div class="feed-filters-v2" style="margin-top: 1rem; flex-wrap: wrap;">
-                        <span style="font-weight: 700; margin-left: 1rem; align-self: center;">تصفية حسب:</span>
+                    <div class="feed-filters-v2" style="margin-top: 1rem;">
+                        <span style="font-weight: 700; margin-left: 1rem;">تصفية حسب:</span>
                         <select class="select-v2" id="sentimentFilter"
                             onchange="DashboardV2.applyFilters('fullReviewsContainer')">
                             <option value="">كل المشاعر</option>
@@ -171,15 +171,6 @@
                             <option value="سلبي">سلبي</option>
                             <option value="محايد">محايد</option>
                         </select>
-
-                        <div class="date-filter-group" style="display: flex; gap: 0.5rem; align-items: center;">
-                            <input type="date" id="dateFrom" class="select-v2"
-                                onchange="DashboardV2.applyFilters('fullReviewsContainer')" placeholder="من تاريخ">
-                            <span>-</span>
-                            <input type="date" id="dateTo" class="select-v2"
-                                onchange="DashboardV2.applyFilters('fullReviewsContainer')" placeholder="إلى تاريخ">
-                        </div>
-
                         <select class="select-v2" id="categoryFilter"
                             onchange="DashboardV2.applyFilters('fullReviewsContainer')">
                             <option value="">كل الفئات</option>
@@ -187,8 +178,6 @@
                             <option value="خدمة العملاء">خدمة العملاء</option>
                             <option value="جودة المنتج">جودة المنتج</option>
                             <option value="السعر">السعر</option>
-                            <option value="التوصيل">التوصيل</option>
-                            <option value="نظافة">نظافة</option>
                         </select>
                     </div>
 
@@ -201,7 +190,7 @@
             <!-- 3. ANALYTICS VIEW -->
             <div id="view-analytics" class="page-view">
                 <section class="section-v2">
-                    <div class="stats-grid animate-charts-grid">
+                    <div class="stats-grid" style="grid-template-columns: repeat(2, 1fr);">
                         <div class="stat-card-v2">
                             <h3>توزيع التقييمات</h3>
                             <div style="height: 250px; margin-top: 1.5rem;">
@@ -214,24 +203,27 @@
                                 <canvas id="sentimentPieChart"></canvas>
                             </div>
                         </div>
-                        <div class="stat-card-v2">
-                            <h3>تحليل التعليقات المسيئة</h3>
-                            <div style="height: 250px; margin-top: 1.5rem;">
-                                <canvas id="toxicityChart"></canvas>
-                            </div>
-                        </div>
-                        <div class="stat-card-v2">
-                            <h3>تحليل الفئات</h3>
-                            <div style="height: 250px; margin-top: 1.5rem;">
-                                <canvas id="categoryChart"></canvas>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="stat-card-v2" style="margin-top: 2rem;">
                         <h3>الاتجاه الزمني للسمعة الرقمية</h3>
                         <div style="height: 300px; margin-top: 1.5rem;">
                             <canvas id="reputationTrendChartAnalytics"></canvas>
+                        </div>
+                    </div>
+
+                    <div class="stats-grid" style="grid-template-columns: repeat(2, 1fr); margin-top: 2rem;">
+                        <div class="stat-card-v2">
+                            <h3>تحليل الفئات (مواضيع التعليقات)</h3>
+                            <div style="height: 250px; margin-top: 1.5rem;">
+                                <canvas id="categoryDistributionChart"></canvas>
+                            </div>
+                        </div>
+                        <div class="stat-card-v2">
+                            <h3>تحليل التعليقات المرفوضة/المسيئة</h3>
+                            <div style="height: 250px; margin-top: 1.5rem;">
+                                <canvas id="abusiveAnalysisChart"></canvas>
+                            </div>
                         </div>
                     </div>
 
