Update ui for dashboard

--- a/frontend/dashboard-v2.html
+++ b/frontend/dashboard-v2.html
@@ -174,10 +174,10 @@
                         <select class="select-v2" id="categoryFilter"
                             onchange="DashboardV2.applyFilters('fullReviewsContainer')">
                             <option value="">كل الفئات</option>
-                            <option value="عام">عام</option>
-                            <option value="خدمة العملاء">خدمة العملاء</option>
-                            <option value="جودة المنتج">جودة المنتج</option>
-                            <option value="السعر">السعر</option>
+                            <option value="نقد">نقد</option>
+                            <option value="مدح">مدح</option>
+                            <option value="استفسار">استفسار</option>
+                            <option value="شكوى">شكوى</option>
                         </select>
                     </div>
 
